--- a/layouts/series/list.html
+++ b/layouts/series/list.html
@@ -19,6 +19,8 @@
             </section>
         </main>
     </div>
+    <aside class="w-64 flex-shrink-0 hidden lg:block pl-8">
     {{ partial "tag_sidebar.html" . }}
+    </aside>
     </div>
 {{ end }}
