--- a/layouts/_default/single.html
+++ b/layouts/_default/single.html
@@ -29,6 +29,8 @@
     {{ end }}
   </div>
 
+  <aside class="w-64 flex-shrink-0 hidden lg:block pl-8">
   {{ partial "tag_sidebar.html" . }}
+  </aside>
 </div>
 {{ end }}
