--- a/layouts/_default/list.html
+++ b/layouts/_default/list.html
@@ -29,7 +29,7 @@
             {{ partial "pagination.html" . }}
         </main>
     </div>
-    <aside class="w-64 flex-shrink-0 hidden md:block pl-8">
+    <aside class="w-64 flex-shrink-0 desktop-sidebar pl-8">
     {{ partial "tag_sidebar.html" . }}
     </aside>
     </div>
