--- a/layouts/index.html
+++ b/layouts/index.html
@@ -93,7 +93,7 @@
 
         </main>
     </div>
-    <aside class="w-64 flex-shrink-0 hidden md:block pl-8">
+    <aside class="w-64 flex-shrink-0 desktop-sidebar pl-8">
         {{ partial "tag_sidebar.html" . }}
     </aside>
     </div>
