feat: 新增 Google Analytics 追蹤碼以提升網站流量分析能力

--- a/layouts/_default/baseof.html
+++ b/layouts/_default/baseof.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html lang="zh-tw">
 <head>
+    {{ template "_internal/google_analytics.html" . }}
     <meta name="description" content="{{ with .Description }}{{ . }}{{ else }}{{ if .IsPage }}{{ .Summary | plainify }}{{ else }}{{ with .Site.Params.description }}{{ . }}{{ end }}{{ end }}{{ end }}">
     
     <meta property="og:title" content="{{ .Title }}">
