--- a/layouts/_default/baseof.html
+++ b/layouts/_default/baseof.html
@@ -72,7 +72,7 @@
     <div class="max-w-7xl mx-auto px-4 sm:px-6 lg:px-8">
         
         <header class="sticky top-0 z-50 flex justify-between items-center py-6 border-b" style="border-color: var(--border-color); background-color: var(--bg-color);">
-            <a href="/ChiYu-Blob/" class="text-xl sm:text-2xl font-bold" style="color: var(--text-color);">{{ .Site.Title }}</a>
+            <a href="{{ .Site.BaseURL }}" class="text-xl sm:text-2xl font-bold" style="color: var(--text-color);">{{ .Site.Title }}</a>
             <nav class="flex items-center space-x-2 sm:space-x-4">
                 <div id="search" ></div>
                 {{/* --- ↓↓↓ 讀取 hugo.toml 的主選單項目 ↓↓↓ --- */}}
